--- a/less/forms.less
+++ b/less/forms.less
@@ -99,11 +99,7 @@
         }
     }
     input[type="checkbox"] {
-        opacity: 0;
-        position: absolute;
-        width: 2.6rem;
-        height: 1.6rem;
-        z-index: 1;
+        display: none;
         &:checked {
             &+ .checkbox {
                 background: @color-success;
