修改了switch的样式和文档中的html结构；之前在安卓下的微信以及qq浏览器中，switch无法选中是因为input上设置的宽高没有生效，修改了fastclick.js后，点击事件可传递到label，input无需设置宽高，即解决了此类问题#103 #81

--- a/docs/_includes/_components/forms.html
+++ b/docs/_includes/_components/forms.html
@@ -76,10 +76,10 @@
               <div class="item-inner">
                 <div class="item-title label">开关</div>
                 <div class="item-input">
-                  <div class="label-switch">
+                  <label class="label-switch">
                     <input type="checkbox">
                     <div class="checkbox"></div>
-                  </div>
+                  </label>
                 </div>
               </div>
             </div>
@@ -180,10 +180,10 @@
           <div class="item-inner">
             <div class="item-title label">开关</div>
             <div class="item-input">
-              <div class="label-switch">
+              <label class="label-switch">
                 <input type="checkbox">
                 <div class="checkbox"></div>
-              </div>
+              </label>
             </div>
           </div>
         </div>
