--- a/less/lists.less
+++ b/less/lists.less
@@ -89,12 +89,14 @@
         padding-top: 0.4rem;
         padding-bottom: 0.35rem;
         min-height: 2.2rem;
+        overflow: hidden;
         box-sizing: border-box;
         .flexbox();
         -webkit-box-flex:1;
         -ms-flex:1;
         .justify-content(space-between);
         .align-items(center);
+
     }
     .item-title {
         .flex-shrink(1);
